implemented get users and add swipes functionality
